--- a/cozy_app/pubspec.yaml
+++ b/cozy_app/pubspec.yaml
@@ -28,6 +28,7 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   google_fonts: ^2.3.1
+  sizer: ^2.0.15
   flutter:
     sdk: flutter
 
